# argos3-insectbot

./: .gitignore  README.md  build_insectbot.sh  build_kilobot.sh  generate_insectbot_torus_experiment.py  run_generated_insectbot_experiment.sh  run_insectbot.sh
src/: CMakeLists.txt
src/cmake/: ARGoSPackaging.cmake
src/controllers/: CMakeLists.txt
src/controllers/insectbot_avoider/: CMakeLists.txt  insectbot_avoider.cpp  insectbot_avoider.h
src/controllers/insectbot_random/: CMakeLists.txt  insectbot_random.cpp  insectbot_random.h
src/examples/controllers/: CMakeLists.txt
src/examples/controllers/insectbot_avoider/: insectbot_avoider.cpp  insectbot_avoider.h
src/examples/controllers/insectbot_random/: CMakeLists.txt  insectbot_random.cpp  insectbot_random.h
src/examples/experiments/: insectbot_avoider.argos  insectbot_avoider_auto_torus.argos  insectbot_avoider_torus.argos  insectbot_multiple.argos  insectbot_two_behaviours.argos
src/experiments/: insectbot_avoider_multiple_torus.argos  insectbot_avoider_obstacles.argos  insectbot_multiple_with_2_behaviours_torus.argos  insectbot_simple.argos  insectbot_two_behaviours_simple.argos  insectbot_two_behaviours_torus.argos
src/experiments/generated_insectbot_torus/: torus_experiment_0.5_0.1.argos  torus_experiment_0.5_0.2.argos  torus_experiment_0.5_0.3.argos  torus_insectbot_avoider_multiple_torus_0.5_0.2_10_1.argos  torus_insectbot_avoider_multiple_torus_0.5_0.2_5_1.argos  torus_insectbot_multiple_0.5_0.2.argos  torus_insectbot_multiple_0.5_0.2_10_1.argos  torus_insectbot_multiple_0.5_0.2_10_10.argos  torus_insectbot_multiple_0.5_0.2_10_4.argos  torus_insectbot_multiple_0.5_0.2_10_7.argos  torus_insectbot_multiple_0.6_0.2.argos  torus_insectbot_multiple_0.6_0.3_10.argos  torus_insectbot_multiple_0.7_0.2.argos  torus_insectbot_multiple_0.8_0.2.argos  torus_insectbot_multiple_0.8_0.3_20.argos  torus_insectbot_multiple_0.8_0.5_10.argos  torus_insectbot_multiple_0.8_0.6_10.argos  torus_insectbot_multiple_0.8_0.6_20.argos  torus_insectbot_multiple_0.9_0.5_10.argos  torus_insectbot_multiple_1_0.3_2.argos  torus_insectbot_two_behaviours_torus_0.5_0.2_10_1.argos
src/plugins/robots/: CMakeLists.txt
src/plugins/robots/insectbot/: CMakeLists.txt
src/plugins/robots/insectbot/simulator/: dynamics2d_insectbot_model.cpp  dynamics2d_insectbot_model.h  dynamics2d_kilobot_model.cpp  dynamics2d_kilobot_model.h  insectbot_entity.cpp  insectbot_entity.h  insectbot_measures.h  kilobot_entity.cpp  kilobot_measures.h  pointmass3d_kilobot_model.cpp  pointmass3d_kilobot_model.h  qtopengl_insectbot.cpp  qtopengl_insectbot.h  qtopengl_kilobot.cpp  qtopengl_kilobot.h
src/plugins/robots/kilobot/: CMakeLists.txt
src/plugins/robots/kilobot/control_interface/: ci_kilobot_controller.cpp  ci_kilobot_controller.h
src/plugins/robots/kilobot/simulator/: dynamics2d_kilobot_model.cpp  kilobot_entity.cpp  kilobot_entity.h  kilobot_measures.h  qtopengl_kilobot.cpp  qtopengl_kilobot.h
src/scripts/: generate_insectbot_torus_experiment.py  run_insectbot_torus_example.sh  run_torus_insectbot_experiment.sh
